--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,15 +19,55 @@ android {
     }
 }
 
-dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:design:26.0.2'
-    implementation 'com.android.support:appcompat-v7:26.0.2'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+ext {
+    compileSdkVersion = 26
+    buildToolsVersion = "26.0.0"
+    minSdkVersion = 16
+    targetSdkVersion = 26
 
-    compile 'com.jakewharton:butterknife:8.8.1'
+    supportVersion = "26.+"
+    annotationsVersion = "26.+"
+    designVersion = "26.+"
+    constraintVersion = "1.0.2"
+    playServiceVersion = "11.0.4"
+
+    rxJavaVersion = "1.2.3"
+    rxAndroidVersion = "1.2.1"
+    retrofitVersion = "2.2.0"
+
+    butterKnifeVersion = "8.6.0"
+    glideVersion = "3.7.0"
+    crashlyticsVersion = "2.6.8"
+    gsonVersion = "2.8.0"
+
+    okHttpLoggingVersion = "3.8.0"
+    stethoVersion = "1.5.0"
+    multidexVersion = "1.0.2"
+}
+
+dependencies {
+    //implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //implementation 'com.android.support:design:26.0.2'
+    //implementation 'com.android.support:appcompat-v7:26.0.2'
+    //implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    //testImplementation 'junit:junit:4.12'
+    //androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    //androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    //implementation 'com.github.jaydeepw:android-utils:3.0.6'
+
+    implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    //AppCompat
+    implementation "com.android.support:appcompat-v7:${supportVersion}"
+    implementation "com.android.support:design:${supportVersion}"
+    implementation "com.android.support:cardview-v7:${supportVersion}"
+    implementation "com.android.support.constraint:constraint-layout:${constraintVersion}"
+
+    //Retrofit
+    implementation "io.reactivex:rxjava:${rxJavaVersion}"
+    implementation "io.reactivex:rxandroid:${rxAndroidVersion}"
+    implementation "com.squareup.retrofit2:retrofit:${retrofitVersion}"
+    implementation "com.squareup.retrofit2:converter-gson:${retrofitVersion}"
+    implementation "com.squareup.retrofit2:adapter-rxjava:${retrofitVersion}"
+    implementation "com.squareup.okhttp3:logging-interceptor:${okHttpLoggingVersion}"
 }
