--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,9 @@ buildscript {
         google()
         jcenter()
         mavenCentral()
+        maven { url "http://jcenter.bintray.com" }
+        maven { url "https://jitpack.io" }
+        maven { url "https://maven.java.net/content/groups/public/" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0-beta6'
@@ -20,6 +23,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+        maven { url "http://jcenter.bintray.com" }
+        maven { url "https://jitpack.io" }
+        maven { url "https://maven.java.net/content/groups/public/" }
     }
 }
 
