--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,6 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:${retrofitVersion}"
     implementation "com.squareup.retrofit2:adapter-rxjava:${retrofitVersion}"
     implementation "com.squareup.okhttp3:logging-interceptor:${okHttpLoggingVersion}"
+
+    implementation 'com.orhanobut:logger:2.1.1'
 }
