--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,9 +63,9 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
-//    implementation ('co.infinum:materialdatetimepicker-support:3.3.0'){
-//        exclude group: 'com.android.support'
-//    }
+    implementation ('co.infinum:materialdatetimepicker-support:3.3.0'){
+        exclude group: 'com.android.support'
+    }
 
     //AppCompat
     implementation "com.android.support:appcompat-v7:${supportVersion}"
